# gitoxide

gitoxide-core/: Cargo.toml
gix-discover/: Cargo.toml
gix-fs/: Cargo.toml
gix-lock/: Cargo.toml
gix-odb/: Cargo.toml
gix-sec/: Cargo.toml
gix-shallow/: Cargo.toml
gix-tempfile/: Cargo.toml
tests/tools/: Cargo.toml
