lints.workspace = true

[package]
name = "gix-discover"
version = "0.51.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "Discover git repositories and check if a directory is a git repository"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2024"
include = ["/src/**/*", "/LICENSE-*"]
rust-version = "1.85"

[lib]
doctest = true

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-ref/sha1"]
## Enable support for the SHA-256 hash by forwarding the feature to dependencies.
sha256 = ["gix-ref/sha256"]

[dependencies]
gix-sec = { version = "^0.14.0", path = "../gix-sec" }
gix-path = { version = "^0.12.0", path = "../gix-path" }
gix-ref = { version = "^0.63.0", path = "../gix-ref" }
gix-fs = { version = "^0.21.1", path = "../gix-fs" }

bstr = { version = "1.12.0", default-features = false, features = ["std", "unicode"] }
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.3"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
serial_test = { version = "3.4.0", default-features = false }
is_ci = "1.1.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
defer = "0.2.1"

[target.'cfg(any(unix, windows))'.dev-dependencies]
tempfile = "3.27.0"

[package.metadata.docs.rs]
features = ["sha1"]
