lints.workspace = true

[package]
name = "gix-lock"
version = "23.0.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A git-style lock-file implementation"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2024"
include = ["/src/**/*", "/LICENSE-*", "/README.md"]
rust-version = "1.85"

[lib]
doctest = true
test = true

[dependencies]
gix-utils = { version = "^0.3.2", default-features = false, path = "../gix-utils" }
gix-tempfile = { version = "^23.0.0", default-features = false, path = "../gix-tempfile" }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
